--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="btn-primary">Shop Now</button>
             </div>
             <div>
-                <img class="flower1" src="Flower Asset/pngwing 10.png" alt="">
+                <img class="banner-img" src="Flower Asset/pngwing 10.png" alt="">
             </div>
         </div>
     </header>
