--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <section>
+          <div class="main">
+            <h2 class="main-title">Our Featured Flowers</h2>
+            <p class="main-discription">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+          </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
