--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
             <h2 class="main-title">Our Featured Flowers</h2>
             <p class="main-discription">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
           </div>
+            <div class="container-box">
+                <div>
+                    <img class="img-png6" src="Flower Asset/pngwing 6.png" alt="">
+                    <h4 class="img-title">Pink Flower Tree</h4>
+                </div>
+                <div>
+                    <img class="img-5" src="Flower Asset/pngwing 5.png" alt="">
+                    <h4 class="img-title">Pink Flower Tree</h4>
+                </div>
+                <div>
+                    <img class="img-7" src="Flower Asset/pngwing 7.png" alt="">
+                    <h4 class="img-title">Pink Flower Tree</h4>
+                </div>
+            </div>
+
         </section>
     </main>
     <footer></footer>
