--- a/index.html
+++ b/index.html
@@ -49,7 +49,21 @@
                     <h4 class="img-title">Pink Flower Tree</h4>
                 </div>
             </div>
-
+        </section>
+        <!-- main part-2 -->
+        <section class="icon">
+            <div>
+                <img class="icon-size" src="Flower Asset/Group 57.png" alt="">
+                <p class="icon-title">Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img class="icon-size" src="Flower Asset/Group 58.png" alt="">
+                <p class="icon-title">Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img class="icon-size" src="Flower Asset/Group 59.png" alt="">
+                <p class="icon-title">Same Day Delivery. Click & Collect.</p>
+            </div>
         </section>
     </main>
     <footer></footer>
