--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     </header>
     <main>
         <section>
-          <div class="main">
-            <h2 class="main-title">Our Featured Flowers</h2>
-            <p class="main-discription">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-          </div>
+            <div class="main">
+                <h2 class="main-title">Our Featured Flowers</h2>
+                <p class="main-discription">It is a long established fact that a reader will be distracted by the
+                    readable <br> content of a page when looking at its layout.</p>
+            </div>
             <div class="container-box">
                 <div>
                     <img class="img-png6" src="Flower Asset/pngwing 6.png" alt="">
@@ -63,6 +64,29 @@
             <div>
                 <img class="icon-size" src="Flower Asset/Group 59.png" alt="">
                 <p class="icon-title">Same Day Delivery. Click & Collect.</p>
+            </div>
+        </section>
+        <!-- poster main part 3 -->
+        <section class="poster">
+            <div class="poster-size">
+                <h3 class="poster-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <p class="poster-discription">It is a long established fact that a reader will be distracted by the
+                    readable <br>content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign up</button>
+            </div>
+            <div>
+                <img class="poster-pic" src="Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </section>
+        <section>
+            <h2 class="social-name">Instagram</h2>
+            <p class="social-heading">It is a long established fact that a reader will be distracted by the
+                readable<br>content of a page when looking at its layout.</p>
+            <div class="flower-size">
+                <img src="Flower Asset/Flower 01.png" alt="">
+                <img src="Flower Asset/Rectangle 4.png" alt="">
+                <img src="Flower Asset/Rectangle 5.png" alt="">
+                <img src="Flower Asset/Rectangle 6.png" alt="">
             </div>
         </section>
     </main>
