--- a/index.html
+++ b/index.html
@@ -82,15 +82,40 @@
             <h2 class="social-name">Instagram</h2>
             <p class="social-heading">It is a long established fact that a reader will be distracted by the
                 readable<br>content of a page when looking at its layout.</p>
-            <div class="flower-size">
-                <img src="Flower Asset/Flower 01.png" alt="">
-                <img src="Flower Asset/Rectangle 4.png" alt="">
-                <img src="Flower Asset/Rectangle 5.png" alt="">
-                <img src="Flower Asset/Rectangle 6.png" alt="">
+            <div class="flower-conainer">
+                <div>
+                    <img class="flower-size" src="Flower Asset/Flower 01.png" alt="">
+                    </div>
+                    <div>
+                        <img class="flower-size" src="Flower Asset/Rectangle 4.png" alt="">
+                    </div>
+                    <div>
+                        <img class="flower-size" src="Flower Asset/Rectangle 5.png" alt="">
+                    </div>
+                    <div>
+                        <img class="flower-size" src="Flower Asset/Rectangle 6.png" alt="">
+                    </div>
+                </div>
+        </section>
+        <section>
+            <div class="blog-banner">
+                <h3 class="blogs-title">Get The Latest Deals</h3>
+                <p class="blogs-names">$30 coupon for first shopping</p>
+                <input type="text" id="email"  placeholder="  Enter your email here....">
+                <button class="btn-primary">Subscribe</button>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section>
+            <div>
+                <h2>FlowerShop</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> 
+                
+
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
