--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <!-- poster main part 3 -->
         <section class="poster">
             <div class="poster-size">
-                <h3 class="poster-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
+                <h3 class="poster-title">Hot Deal ! Sale Up To 25% <span class="text-primary">Off</span></h3>
                 <p class="poster-discription">It is a long established fact that a reader will be distracted by the
                     readable <br>content of a page when looking at its layout.</p>
                 <button class="btn-primary">Sign up</button>
@@ -108,12 +108,12 @@
     </main>
     <footer>
         <section>
-            <div>
-                <h2>FlowerShop</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p> 
-                
-
-            </div>
+            <div class="footer">
+                <h2 class="footer-title"> 
+                    <span class="text-primary">Flower</span> Shop</h2>
+                <p class="footer-discription">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <p class="year"><time>@2020-2023,</time>FlowerShop.com. All rights reserved. </p>
+               </div>
         </section>
     </footer>
 </body>
